grammar.txt
start = declaration* eos
declaration = class | function | statement

statements = statement*
statement = if
    | switch
    | for
    | while 
    | return
    | var
    | var_assign
    | expression_statement
    | block

block = '{' statements '}'

# class
class = 'class' identifier '{' (var | function)* '}'

# function
function = 'fun' identifier '(' parameters ')' '{' statements '}'
parameters = identifier (',' identifier)*

# return
return = 'ret' expression?

# variable
var = 'set' identifier '=' expression

# varassign
var_assign = (call ".")? identifier ('=' | '+=' | '-=' | '*=' | '/=' | '//=' | '**=') expression

# if statement
if = 'if' expression block elif* else?
elif = 'elif' expression block
else = 'else' expression block

# switch statement
switch = 'switch' expression '{' match* '}'
match = 'case' expression block

# while 
while = 'while' expression '{' statements '}'

# for
for = 'for' identifier 'in' (identifier | range) block

# range
range = int ('..' | '..=') int?  

# expressions
expression_statement = expression
expression = or 

or = and '(or' or)?
and = equality ('and' equality)*
equality = comparison (('==' | '!=') comparison)*
comparison = term (('>' | '>=' | '<' | '<=') term)*
term = factor (('+' | '-') factor)*
factor = exponent (('*' | '/' | '//') exponent)*
exponent = unary '**' unary
unary = ('!' | '-') unary | call | primary
call = identifier ('(' arguments ')' | '.' identifier)* 
arguments =  primary (',' primary)* 
primary = string | float | int | bool | "(" expression ")"

types = 'string'
    | 'int'
    | 'float'
    | 'bool'

# Lexical Grammar Rules
identifier = alpha (alpha | digit)*
string =  '"' (alpha | digit)* '"' 
float = digit* ('.' digit*)?
int = digit+
bool = 'true' | 'false'
null = 'null'

digit = 0 - 9
alpha = 'a' - 'z' | 'A' - 'Z' | '_'
